--- a/view.html
+++ b/view.html
@@ -51,7 +51,7 @@
               <h3><strong>Character Statistics</strong></h3>
             </div>
             <div class="card-body">
-              <h2 id="name">Yoda</h2>
+              <h2 id="name">Character</h2>
               <div id="stats" style="display: none;">
                 <h3>
                   <strong>Role:</strong> <span id="role">Jedi Master</span>
